--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -20,3 +20,13 @@ html,body,#app{
 .el-pagination{
     margin-top: 15px;
 }
+
+.el-step{
+margin: 15px 0;
+}
+.el-step__title{ 
+    font-size: 13px!important;
+}
+.ql-editor{
+    min-height: 300px;
+}
