--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,32 +1,41 @@
 /* 全部样式表 */
-html,body,#app{
+html,
+body,
+#app {
     height: 100%;
     margin: 0;
     padding: 0;
+    min-width: 1366px;
     /* width: 1366px; */
 }
-.el-breadcrumb{
+
+.el-breadcrumb {
     margin-bottom: 10px;
     font-size: 12px;
 
 }
-.el-card{
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15)!important;
+
+.el-card {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
 }
-.el-table{
+
+.el-table {
     margin-top: 15px;
     font-size: 12px;
 }
-.el-pagination{
+
+.el-pagination {
     margin-top: 15px;
 }
 
-.el-step{
-margin: 15px 0;
+.el-step {
+    margin: 15px 0;
 }
-.el-step__title{ 
-    font-size: 13px!important;
+
+.el-step__title {
+    font-size: 13px !important;
 }
-.ql-editor{
+
+.ql-editor {
     min-height: 300px;
 }
